// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Step Verification Script Delegate Click Verify button 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
        <button
          class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="bp3-spinner bp3-button-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="20"
                stroke-width="16.00"
                viewBox="-3.00 -3.00 106.00 106.00"
                width="20"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
          <span
            class="bp3-button-text"
          >
            verify
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-large"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="steps-spinner"
            style="margin-right: 12px;"
          >
            <svg
              height="16"
              viewBox="0 0 128 128"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                  fill="#ff8e02"
                />
                <path
                  d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                  fill="#ffddb3"
                  fill-opacity="0.3"
                />
                <path
                  d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                  fill="#ffd29a"
                  fill-opacity="0.4"
                />
                <path
                  d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                  fill="#ffc680"
                  fill-opacity="0.5"
                />
                <path
                  d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                  fill="#ffbb67"
                  fill-opacity="0.6"
                />
                <path
                  d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                  fill="#ffb04d"
                  fill-opacity="0.7"
                />
                <path
                  d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                  fill="#ffa535"
                  fill-opacity="0.8"
                />
                <path
                  d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                  fill="#ff991b"
                  fill-opacity="0.9"
                />
                <animatetransform
                  attributeName="transform"
                  calcMode="discrete"
                  dur="1200ms"
                  repeatCount="indefinite"
                  type="rotate"
                  values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                />
              </g>
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
          >
            delegate.successVerification.checkDelegateInstalled
          </p>
        </div>
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-large"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
          >
            <span
              class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
              data-icon="command-artifact-check"
            >
              <svg
                height="10"
                viewBox="0 0 14 14"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2L5.7 8.4 4.1 6.9c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              delegate.successVerification.heartbeatReceived
              (
              0
              /
              0
              )
            </p>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
          >
            <span
              class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
              data-icon="command-artifact-check"
            >
              <svg
                height="10"
                viewBox="0 0 14 14"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2L5.7 8.4 4.1 6.9c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              delegate.successVerification.delegateInitialized
              (
              0
              /
              )
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      id="stepReviewScriptBackButton"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;

exports[`Create Step Verification Script Delegate Click back button 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            verify
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      disabled=""
      id="stepReviewScriptBackButton"
      tabindex="-1"
      type="button"
    >
      <div
        class="bp3-spinner bp3-button-spinner"
      >
        <div
          class="bp3-spinner-animation"
        >
          <svg
            height="20"
            stroke-width="16.00"
            viewBox="-3.00 -3.00 106.00 106.00"
            width="20"
          >
            <path
              class="bp3-spinner-track"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            />
            <path
              class="bp3-spinner-head"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              pathLength="280"
              stroke-dasharray="280 280"
              stroke-dashoffset="210"
            />
          </svg>
        </div>
      </div>
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;

exports[`Create Step Verification Script Delegate Click back button 2`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            verify
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      id="stepReviewScriptBackButton"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;

exports[`Create Step Verification Script Delegate render data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            verify
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      id="stepReviewScriptBackButton"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;
